[workspace]
members = [".", "glrcfg"]

[workspace.package]
description = "A microservice to manage GitLab Runners in Docker via REST"
readme = "README.md"

version = "0.3.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/bmc-labs/runrs"
keywords = [
    "gitlab",
    "runner",
    "runners",
    "github",
    "actions",
    "ci/cd",
    "infra",
    "peripheral",
]
exclude = [".github", "assets"]

authors = [
    "bmc::labs GmbH <runrs@bmc-labs.com>",
    "Fabio Meier <fabio.meier@bmc-labs.com>",
    "Florian Eich <florian.eich@bmc-labs.com>",
]

[package]
name = "runrs"
description.workspace = true
readme.workspace = true

version.workspace = true
edition.workspace = true

license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
atmosphere = { version = "0.3.0", features = ["sqlite"] }
axum = { version = "0.7.4", features = ["macros", "http2"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.38", features = [
    "serde",
    "alloc",
    "now",
    "std",
], default-features = false }
glrcfg = { version = "0.1.0", path = "glrcfg", features = ["tracing", "sqlx"] }
jsonwebtoken = "9.2.0"
miette = { version = "7.2.0", features = ["fancy"] }
mime = "0.3.17"
names = { version = "0.14.0", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "time",
    "chrono",
] }
tracing-test = "0.2.4"
utoipa = { version = "4.2.0", features = ["axum_extras", "url"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

[dev-dependencies]
eyre = "0.6.12"
http-body-util = "0.1.0"
pretty_assertions = "1.4.0"
tower = "0.4.13"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[profile.release]
lto = "thin"
