[package]
name = "glrcfg"
description = "A Rust implementation of the GitLab Runner Advanced Configuration file format"
readme = "README.md"

version = "0.2.0"
edition = "2021"

license = "Apache-2.0"
repository.workspace = true
keywords = ["gitlab", "runner", "runners", "configuration", "config"]
exclude = [".github"]

authors = [
    "Florian Eich <florian.eich@bmc-labs.com>",
    "Fabio Meier <fabio.meier@bmc-labs.com>",
]

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
    "alloc",
    "now",
    "std",
] }
maybe-multiple = { version = "0.1.0", features = ["serde"] }
once_cell = "1.19.0"
regex = { version = "1.10.5", features = ["use_std"] }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, optional = true }
thiserror = "1.0.61"
toml = "0.8.12"
tracing = { version = "0.1.40", optional = true }
url = { version = "2.5.2", features = ["serde"] }

[features]
default = []
tracing = ["dep:tracing"]
sqlx = ["dep:sqlx"]

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"
proptest = "1.5.0"
serde_json = "1.0.120"
test-strategy = "0.4.0"
toml = "0.8.12"
